--- a/GroundUp.Api/Pages/Clients/Details.cshtml
+++ b/GroundUp.Api/Pages/Clients/Details.cshtml
@@ -114,10 +114,10 @@
                     </div>
                     <div class="row px-4 py-4">
                         <div class="col-md-2 offset-10">
-                            <a class="btn btn-outline-primary"
+                            <a class="btn btn-outline-primary w-100"
                                asp-page="/Memberships/CreateMembership"
                                asp-route-name="@Model.ClientViewModel.FirstName @Model.ClientViewModel.LastName"
-                               asp-route-id="@Model.ClientViewModel.Id"><i class="fa-solid fa-plus"></i> Add new membership</a>
+                               asp-route-id="@Model.ClientViewModel.Id"><i class="fa-solid fa-plus"></i> </a>
                         </div>
                     </div>
                 </div>
