--- a/GroundUp.Api/Pages/MembershipTypes/MembershipType.cshtml
+++ b/GroundUp.Api/Pages/MembershipTypes/MembershipType.cshtml
@@ -37,8 +37,13 @@
             </div>
 
             <div class="p-4">
-                <div class="col-md-2 offset-10">
-                    <button style="width: 100%" class="btn btn-outline-primary"><i class="fa-solid fa-floppy-disk"></i></button>
+                <div class="row">
+                    <div class="col-md-2">
+                        <a class="btn btn-outline-danger w-100" asp-page="/MembershipTypes/Index">Back</a>
+                    </div>
+                    <div class="col-md-2 offset-8">
+                        <button class="btn btn-outline-primary w-100"><i class="fa-solid fa-floppy-disk"></i></button>
+                    </div>
                 </div>
             </div>
         </div>
