--- a/GroundUp.Api/Pages/Memberships/CreateMembership.cshtml
+++ b/GroundUp.Api/Pages/Memberships/CreateMembership.cshtml
@@ -44,19 +44,10 @@
                 <div class="row mb-2">
                     <div class="form-group col-md-6">
                         <label asp-for="CreateMembershipViewModel.From" class="mb-2">Start Date</label>
-                        <input asp-for="CreateMembershipViewModel.From" type="date" class="form-control">
+                        <input asp-for="CreateMembershipViewModel.From" class="form-control">
                         <small class="form-text text-muted">Enter start date.</small>
                         <div>
                             <span asp-validation-for="CreateMembershipViewModel.From" class="text-danger"></span>
-                        </div>
-                    </div>
-
-                    <div class="form-group col-md-6">
-                        <label asp-for="CreateMembershipViewModel.To" class="mb-2">End Date</label>
-                        <input asp-for="CreateMembershipViewModel.To" type="date" class="form-control">
-                        <small class="form-text text-muted">Enter end date.</small>
-                        <div>
-                            <span asp-validation-for="CreateMembershipViewModel.To" class="text-danger"></span>
                         </div>
                     </div>
                 </div>
@@ -64,7 +55,7 @@
 
             <div class="p-4 border-bottom row">
                 <div class="col-md-2">
-                    <a style="width: 100%" class="btn btn-outline-danger" asp-page="./Details" asp-route-id="@Model.ClientId">Back</a>
+                    <a style="width: 100%" class="btn btn-outline-danger" asp-page="/Clients/Details" asp-route-id="@Model.ClientId">Back</a>
                 </div>
                 <div class="col-md-2 offset-8">
                     <button type="submit" style="width: 100%" class="btn btn-outline-primary">Save</button>
