--- a/GroundUp.Api/Pages/Memberships/UpdateMembershipSession.cshtml
+++ b/GroundUp.Api/Pages/Memberships/UpdateMembershipSession.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div style="max-width: 800px; margin: auto" >
-    <form method="POST" asp-page-handler="Update">
+    <form method="POST" >
         <div class="card">
 
             <input asp-for="Update.Id" id="Update.Id" hidden />
@@ -31,17 +31,11 @@
                 </div>
 
                 <div class="row mb-4">
-                    <div class="col-md-6">
-                        <div class="form-group form-check">
-                            <label class="form-check-label" for="Update.IsCompleted">Is completed</label>
-                            <input asp-for="Update.IsCompleted" id="Update.IsCompletged" class="form-check-input" type="checkbox" />
-                        </div>
-                    </div>
 
                     <div class="col-md-6">
                         <div class="form-group form-check">
                             <label class="form-check-label" for="Updatel.IsCancelled">Is cancelled?</label>
-                            <input asp-for="Update.IsCancelled" id="Update.IsCancelled" class="form-check-input" type="checkbox" />
+                            <input asp-for="Update.IsCancelled" id="Update.IsCancelled" class="form-check-input" type="checkbox"/>
                         </div>
                     </div>
                 </div>
@@ -56,9 +50,16 @@
             </div>
 
             <div class="p-4">
-                <div class="col-md-2 offset-10">
-                    <button style="width: 100%" class="btn  btn-outline-primary" >Save</button>
+                <div class="row">
+
+                <div class="col-md-2">
+                    <button class="btn btn-outline-danger w-100" asp-page-handler="Delete"><i class="fa fa-trash"></i></button>
                 </div>
+                <div class="col-md-2 offset-8">
+                    <button  class="btn btn-outline-primary w-100" asp-page-handler="Update"><i class="fa fa-floppy-disk"></i></button>
+                </div>
+            </div>
+
             </div>
         </div>
 
