--- a/GroundUp.Api/Pages/Memberships/CreateMembership.cshtml
+++ b/GroundUp.Api/Pages/Memberships/CreateMembership.cshtml
@@ -55,10 +55,10 @@
 
             <div class="p-4 border-bottom row">
                 <div class="col-md-2">
-                    <a style="width: 100%" class="btn btn-outline-danger" asp-page="/Clients/Details" asp-route-id="@Model.ClientId">Back</a>
+                    <a  class="btn btn-outline-danger w-100" asp-page="/Clients/Details" asp-route-id="@Model.ClientId">Back</a>
                 </div>
                 <div class="col-md-2 offset-8">
-                    <button type="submit" style="width: 100%" class="btn btn-outline-primary">Save</button>
+                    <button type="submit" class="btn btn-outline-primary w-100">Save</button>
                 </div>
             </div>
         </div>
