--- a/GroundUp.Api/Pages/Memberships/Membership.cshtml
+++ b/GroundUp.Api/Pages/Memberships/Membership.cshtml
@@ -24,29 +24,75 @@
             </div>
 
             <div class="p-4">
-                <table class="table table-bordered">
+                <form method="POST">
+                    <input asp-for="MembershipId" id="update-membership-id" hidden />
+                    <input asp-for="Update.Id" id="update-id" hidden />
+                    <div class="row">
+                        <div class="row mb-2 mt-2">
+                            <div class="form-group col-md-6">
 
-                   
-                    <tr>
-                        <th>Name</th>
-                        <td>@Model.MembershipViewModel.MembershipType.Name</td>
-                    </tr>
+                                <label asp-for="Update.MembershipTypeId" class="mb-2">Membership Type</label>
+                                <select asp-for="Update.MembershipTypeId" asp-items="Model.MembershipTypes" class="form-select" aria-label="Default select example">
+                                    <option value="">-- Select --</option>
+                                </select>
+                                <div>
+                                    <span asp-validation-for="Update.ClientId" class="text-danger"></span>
+                                </div>
 
-                    <tr>
-                        <th>From</th>
-                        <td>@Model.MembershipViewModel.From.ToShortDateString()</td>
-                    </tr>
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label asp-for="Update.SessionCount" class="mb-2">Session Count</label>
+                                <input asp-for="Update.SessionCount" type=" text" class="form-control" placeholder="Session count">
+                                <small class="form-text text-muted">Enter count of sessions.</small>
+                                <div>
+                                    <span asp-validation-for="Update.SessionCount" class="text-danger"></span>
+                                </div>
+                            </div>
+                        </div>
 
-                    <tr>
-                        <th>To</th>
-                        <td>@Model.MembershipViewModel.To.ToShortDateString()</td>
-                    </tr>
-                    <tr>
-                        <th>Number of Sessions</th>
-                        <td>@Model.MembershipViewModel.SessionCount</td>
-                    </tr>
+                        <div class="row mb-2">
+                            <div class="form-group col-md-6">
+                                <label asp-for="Update.From" class="mb-2">Start Date</label>
+                                <input asp-for="Update.From" class="form-control">
+                                <small class="form-text text-muted">Enter start date.</small>
+                                <div>
+                                    <span asp-validation-for="Update.From" class="text-danger"></span>
+                                </div>
+                            </div>
 
-                </table>
+                            <div class="form-group col-md-6">
+                                <label asp-for="Update.FrozenDate" class="mb-2">Frozen Date</label>
+                                <input asp-for="Update.FrozenDate" class="form-control" readonly>
+                                <small class="form-text text-muted">When membership was frozen.</small>
+                                <div>
+                                    <span asp-validation-for="Update.FrozenDate" class="text-danger"></span>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                    <div class="py-4 border-bottom row mb-4">
+                        @if (Model.Update.FrozenDate == null)
+                        {
+                            <div class="col-md-2">
+                                <button class="btn btn-outline-danger w-100" asp-page-handler="FreezeMembership">Freeze</button>
+                            </div>
+                        }
+
+                        @if (Model.Update.FrozenDate != null)
+                        {
+                            <div class="col-md-2">
+                                <button class="btn btn-outline-danger w-100" asp-page-handler="UnfreezeMembership">Unfreeze</button>
+                            </div>
+                        }
+
+                        <div class="col-md-2 offset-8">
+                            <button class="btn btn-outline-primary w-100" asp-page-handler="UpdateMembership"><i class="fa-solid fa-floppy-disk"></i></button>
+                        </div>
+                    </div>
+                </form>
+
                 <div class="row">
                     <div class="offset-10 col-md-2">
                         <form method="POST" asp-page-handler="AddNewSession">
