--- a/GroundUp.Api/Pages/Memberships/Membership.cshtml
+++ b/GroundUp.Api/Pages/Memberships/Membership.cshtml
@@ -50,7 +50,7 @@
                             </div>
                         </div>
 
-                        <div class="row mb-2">
+                        <div class="row">
                             <div class="form-group col-md-6">
                                 <label asp-for="Update.From" class="mb-2">Start Date</label>
                                 <input asp-for="Update.From" class="form-control">
@@ -60,6 +60,19 @@
                                 </div>
                             </div>
 
+                            <div class="form-group col-md-6">
+                                <label asp-for="Update.To" class="mb-2">Frozen Date</label>
+                                <input asp-for="Update.To" class="form-control" readonly>
+                                <small class="form-text text-muted">When membership ends.</small>
+                                <div>
+                                    <span asp-validation-for="Update.To" class="text-danger"></span>
+                                </div>
+                            </div>
+
+                           
+                        </div>
+
+                        <div class="row mb-2">
                             <div class="form-group col-md-6">
                                 <label asp-for="Update.FrozenDate" class="mb-2">Frozen Date</label>
                                 <input asp-for="Update.FrozenDate" class="form-control" readonly>
