--- a/GroundUp.Api/Pages/Memberships/Membership.cshtml
+++ b/GroundUp.Api/Pages/Memberships/Membership.cshtml
@@ -101,7 +101,7 @@
                         }
 
                         <div class="col-md-2 offset-8">
-                            <button class="btn btn-outline-primary w-100" asp-page-handler="UpdateMembership"><i class="fa-solid fa-floppy-disk"></i></button>
+                            <button class="btn btn-outline-primary w-100" asp-page-handler="UpdateMembership" disabled><i class="fa-solid fa-floppy-disk"></i></button>
                         </div>
                     </div>
                 </form>
