--- a/GroundUp.Api/Pages/Memberships/Membership.cshtml
+++ b/GroundUp.Api/Pages/Memberships/Membership.cshtml
@@ -20,7 +20,7 @@
     {
         <div class="card">
             <div class="py-4 border-bottom">
-                <h4 class="text-center">Membership</h4>
+                <h4 class="text-center">Membership for @Model.ClientName</h4>
             </div>
 
             <div class="p-4">
@@ -61,7 +61,7 @@
                             </div>
 
                             <div class="form-group col-md-6">
-                                <label asp-for="Update.To" class="mb-2">Frozen Date</label>
+                                <label asp-for="Update.To" class="mb-2">End Date</label>
                                 <input asp-for="Update.To" class="form-control" readonly>
                                 <small class="form-text text-muted">When membership ends.</small>
                                 <div>
