Better navigation on calendar

--- a/GroundUp.Api/Pages/Clients/Details.cshtml
+++ b/GroundUp.Api/Pages/Clients/Details.cshtml
@@ -256,7 +256,7 @@
 
                             <tr>
                                 <th>Sessions Left</th>
-                                <td>@Model.ActiveMembership.MembershipSessions.Where(ms => ms.Start == null && ms.End == null).Count()</td>
+                                <td>@Model.ActiveMembership.SessionsLeft</td>
                             </tr>
 
 
