--- a/GroundUp.Api/Pages/Index.cshtml
+++ b/GroundUp.Api/Pages/Index.cshtml
@@ -123,8 +123,8 @@
                                     <div id="@fromDate.ToShortDateString()">
                                         <div class="d-flex justify-content-end align-items-center">
                                             <a asp-page="/Memberships/CreateMembershipSession" asp-route-year="@dayInWeek.Year" asp-route-month="@dayInWeek.Month" asp-route-day="@dayInWeek.Day" asp-route-hour="@hour"
-                                               style="cursor: pointer; background-color: #f2f2f2; padding: 2px; border-radius: 10px; font-size: 10px; height: 20px; width: 20px; text-align: center">
-                                                <i class="fa fa-plus"></i>
+                                               style="margin-left: 8px;">
+                                                <i class="fa-solid fa-circle-plus"></i>
                                             </a>
                                         </div>
                                         @foreach (var session in Model.Items)
@@ -139,11 +139,17 @@
 
                                             @if (sessionStartDay == day && hour == sessionStartHour)
                                             {
-                                                <div class="d-flex mt-1" style="margin-right: 20px">
+                                                <div class="d-flex flex-row mt-1">
+
 
                                                     <a asp-page="/Memberships/UpdateMembershipSession" asp-route-id="@sessionId" asp-route-clientId="@clientId" style="text-decoration: none; width: 100%; border-radius: 5px; background-color: @color; color: white; padding: 5px; font-size: 12px;  text-align: center">
                                                         @session.ClientName
                                                     </a>
+
+                                                    <a asp-page="/Clients/Details" asp-route-id="@clientId" style="margin-left: 8px">
+                                                        <i class="fa-regular fa-circle-right"></i>
+                                                    </a>
+
                                                 </div>
 
                                             }
