--- a/GroundUp.Api/wwwroot/css/site.css
+++ b/GroundUp.Api/wwwroot/css/site.css
@@ -74,3 +74,15 @@ body {
         min-width: 40px;
     }
 }
+
+
+btn-small {
+    cursor: pointer;
+    background-color: #f2f2f2;
+    padding: 2px;
+    border-radius: 10px;
+    font-size: 10px;
+    height: 20px;
+    width: 20px;
+    text-align: center
+}
