Adding navigation on calendar dates

--- a/GroundUp.Api/Pages/Memberships/CreateMembershipSession.cshtml
+++ b/GroundUp.Api/Pages/Memberships/CreateMembershipSession.cshtml
@@ -10,7 +10,7 @@
                 <h4 class="text-center">
                     No members with active memberships found for:
                     <br />
-                    <strong>From.ToShortDateString()</strong>
+                    <strong>@Model.From.ToShortDateString()</strong>
                 </h4>
             </div>
 
