--- a/GroundUp.Api/Pages/Index.cshtml
+++ b/GroundUp.Api/Pages/Index.cshtml
@@ -8,14 +8,18 @@
 
 
 <div class="mx-4">
+
     <div class="card px-4 py-2">
         <div class="row p-4 text-center">
             <div class="col-md-2">
                 <div class="row">
                     <div class="col-md-4">
-                        <button class="btn btn-primary w-100">
-                            <i class="fa-2x fa-solid fa-arrow-circle-left"></i>
-                        </button>
+                        <form method="POST">
+                            <input asp-for="StartDate" type="hidden" />
+                            <button class="btn btn-primary w-100" asp-page-handler="PreviousWeek" asp-route-year="@Model.StartDate.Year" asp-route-month="@Model.StartDate.Month" asp-route-day="@Model.StartDate.Day">
+                                <i class="fa-2x fa-solid fa-arrow-circle-left"></i>
+                            </button>
+                        </form>
                     </div>
                     <div class="col-md-8 m-auto">
                         <div>
@@ -37,9 +41,12 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <button class="btn btn-primary w-100">
-                            <i class="fa-2x fa-solid fa-arrow-circle-right"></i>
-                        </button>
+                        <form method="POST">
+                            <input asp-for="StartDate" type="hidden" />
+                            <button class="btn btn-primary w-100" asp-page-handler="NextWeek" asp-route-year="@Model.StartDate.Year" asp-route-month="@Model.StartDate.Month" asp-route-day="@Model.StartDate.Day">
+                                <i class="fa-2x fa-solid fa-arrow-circle-right"></i>
+                            </button>
+                        </form>
 
                     </div>
                 </div>
