--- a/GroundUp.Api/Pages/Shared/_Layout.cshtml
+++ b/GroundUp.Api/Pages/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/lib/font-awesome/css/all.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WebApplication1.styles.css" asp-append-version="true" />
+
 </head>
 <body>
     <header>
@@ -38,16 +39,17 @@
         </nav>
     </header>
     <div>
+
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-
+    <script src="~/lib/chartjs/chart.umd.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-
+   
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
