--- a/GroundUp.Api/Pages/Shared/_Layout.cshtml
+++ b/GroundUp.Api/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Organizations/Index">Organization</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-page="/Clients/Index">Clients</a>
                         </li>
                         <li class="nav-item">
