--- a/GroundUp.Api/wwwroot/css/site.css
+++ b/GroundUp.Api/wwwroot/css/site.css
@@ -86,3 +86,32 @@ btn-small {
     width: 20px;
     text-align: center
 }
+
+
+.text-right {
+    text-align: right
+}
+
+.bg-light-green {
+    background-color:rgb(75, 192, 192); 
+}
+
+.bg-light-blue {
+    background-color: rgb(54, 162, 235);
+}
+
+.bg-light-red {
+    background-color: rgb(255, 99, 132);
+}
+
+.text-ligth-green {
+    color: rgb(75, 192, 192);
+}
+
+.text-light-blue {
+    color: rgb(54, 162, 235);
+}
+
+.text-light-red {
+    color: rgb(255, 99, 132);
+}
