--- a/GroundUp.Api/Pages/Shared/_UpdateMembershipSession.cshtml
+++ b/GroundUp.Api/Pages/Shared/_UpdateMembershipSession.cshtml
@@ -46,7 +46,7 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <label for="end-@Model.Id" class="my-2">End</label>
-                        <input asp-for="End" id="end-@Model.Id" class="form-control" type="datetime-local" />
+                        <input asp-for="End" id="end-@Model.Id" class="form-control" type="datetime-local" readonly/>
                     </div>
                 </div>
             </div>
