--- a/GroundUp.Api/Pages/Clients/Details.cshtml
+++ b/GroundUp.Api/Pages/Clients/Details.cshtml
@@ -235,21 +235,40 @@
                   
 
                     <div class="p-4">
-                        <div class="row">
+                        <div class="row mb-4">
                             <div class="col-md-6">
-                                <div class="alert alert-primary" role="alert">
-                                    <h6>Days Left</h6>
-                                    <h1 class="text-center">
-                                        @Model.ActiveMembership.DaysLeft / 32
-                                    </h1>
+                                <div class="m-2 card flex-grow-1">
+                                    <div class="d-flex flex-row justify-content-between w-100 border-bottom pb-2">
+                                        <div class="bg-light-green p-4 m-2 text-white rounded">
+                                            <i class="fa-solid fa-calendar"></i>
+                                        </div>
+                                        <div class="d-flex flex-column m-2 w-100 text-right">
+                                            <div>
+                                                <div style="font-size: 18px"><span><strong>Days Left</strong></span></div>
+                                                <div>
+                                                    <h2 class="text-muted">@Model.ActiveMembership.DaysLeft / 32</h2>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
+
                             </div>
                             <div class="col-md-6">
-                                <div class="alert alert-primary" role="alert">
-                                    <h6>Sessions Left</h6>
-                                    <h1 class="text-center">
-                                        @Model.ActiveMembership.SessionsLeft / @Model.ActiveMembership.MembershipSessions.Count
-                                    </h1>
+                                <div class="m-2 card flex-grow-1">
+                                    <div class="d-flex flex-row justify-content-between w-100 border-bottom pb-2">
+                                        <div class="bg-light-blue p-4 m-2 text-white rounded">
+                                            <i class="fa-solid fa-dumbbell"></i>
+                                        </div>
+                                        <div class="d-flex flex-column m-2 w-100 text-right">
+                                            <div>
+                                                <div style="font-size: 18px"><span><strong>Sessions Left</strong></span></div>
+                                                <div>
+                                                    <h2 class="text-muted"> @Model.ActiveMembership.SessionsLeft / @Model.ActiveMembership.MembershipSessions.Count</h2>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
