--- a/GroundUp.Api/Pages/Calendars/Index.cshtml
+++ b/GroundUp.Api/Pages/Calendars/Index.cshtml
@@ -65,7 +65,7 @@
                         @foreach (var day in Model.Dates)
                         {
                             var isToday = DateTime.Now.ToShortDateString() == day.ToShortDateString();
-                            var bgColor = isToday ? "#f2f2f2" : "";
+                            var bgColor = isToday ? "#adb5bd" : "";
 
 
                             <th class="calendar_cell" style="background-color: @bgColor">
