--- a/GroundUp.Api/Pages/Shared/_Layout.cshtml
+++ b/GroundUp.Api/Pages/Shared/_Layout.cshtml
@@ -7,52 +7,48 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/lib/font-awesome/css/all.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/WebApplication1.styles.css" asp-append-version="true" />
 
 </head>
+
+
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-4">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">GROUND UP</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Calendars/Index">Calendar</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-page="/Clients/Index">Clients</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/MembershipTypes/Index">Memberships Types</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Memberships/Index">Memberships</a>
-                        </li>
-                    </ul>
-                </div>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
+            <div class="d-flex flex-row justify-content-between align-items-center flex-grow-1 p-2">
+                <a class="header-logo px-2" asp-area="" asp-page="/Index">GROUND UP</a>
+                <button data-bs-target="#sidebar" data-bs-toggle="collapse" class="btn btn-default"><i class="fa-solid fa-bars"></i> </button>
             </div>
         </nav>
     </header>
-    <div>
 
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+    <div class="container-fluid">
+        <div class="row flex-nowrap">
+            <div class="col-auto px-0">
+                <div id="sidebar" class="collapse collapse-horizontal show border-end">
+                    <div id="sidebar-nav" class="list-group border-0 rounded-0 text-sm-start min-vh-100">
+                        <a class="list-group-item border-end-0 d-flex flex-row align-items-center text-truncate p-2" data-bs-parent="#sidebar" asp-page="/Index"><i class="fa-solid fa-home p-2"></i> <span>Home</span> 
+                            </a>
+                        <a class="list-group-item border-end-0 d-flex flex-row align-items-center text-truncate p-2" data-bs-parent="#sidebar" asp-page="/Calendars/Index"><i class="fa-solid fa-calendar p-2"></i> <span>Calendar</span> </a>
+                        <a class="list-group-item border-end-0 d-flex flex-row align-items-center text-truncate p-2" data-bs-parent="#sidebar" asp-page="/Clients/Index"><i class="fa-solid fa-users p-2"></i> <span>Clients</span> </a>
+                        <a class="list-group-item border-end-0 d-flex flex-row align-items-center text-truncate p-2" data-bs-parent="#sidebar" asp-page="/MembershipTypes/Index"><i class="fa-solid fa-home p-2"></i> <span>Types</span> </a>
+                        <a class="list-group-item border-end-0 d-flex flex-row align-items-center text-truncate p-2" data-bs-parent="#sidebar" asp-page="/Memberships/Index"><i class="fa-solid fa-dumbbell p-2"></i> <span>Memberships</span> </a>
+                    </div>
+                </div>
+            </div>
+            <main class="col ps-md-2 pt-2">
+                @RenderBody()
+            </main>
+        </div>
+    </div>
+
+    <div>
     </div>
 
     <script src="~/lib/chartjs/chart.umd.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-   
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
