--- a/GroundUp.Api/Pages/Index.cshtml
+++ b/GroundUp.Api/Pages/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container">
 
-    <h3 class="text-centar text-muted ">
+    <h3 class="text-centar text-muted mt-2 ">
         This year
     </h3>
 
