--- a/GroundUp.Api/Pages/Shared/_Layout.cshtml
+++ b/GroundUp.Api/Pages/Shared/_Layout.cshtml
@@ -12,30 +12,25 @@
 
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
-            <div class="d-flex flex-row justify-content-between align-items-center flex-grow-1 p-2">
-                <a class="header-logo px-2" asp-area="" asp-page="/Index">GROUND UP</a>
-                <button data-bs-target="#sidebar" data-bs-toggle="collapse" class="btn btn-default"><i class="fa-solid fa-bars"></i> </button>
-            </div>
-        </nav>
-    </header>
 
     <div class="container-fluid">
         <div class="row flex-nowrap">
             <div class="col-auto px-0">
                 <div id="sidebar" class="collapse collapse-horizontal show border-end">
                     <div id="sidebar-nav" class="list-group border-0 rounded-0 text-sm-start min-vh-100">
-                        <a class="list-group-item border-end-0 d-flex flex-row align-items-center text-truncate p-2" data-bs-parent="#sidebar" asp-page="/Index"><i class="fa-solid fa-home p-2"></i> <span>Home</span> 
-                            </a>
-                        <a class="list-group-item border-end-0 d-flex flex-row align-items-center text-truncate p-2" data-bs-parent="#sidebar" asp-page="/Calendars/Index"><i class="fa-solid fa-calendar p-2"></i> <span>Calendar</span> </a>
-                        <a class="list-group-item border-end-0 d-flex flex-row align-items-center text-truncate p-2" data-bs-parent="#sidebar" asp-page="/Clients/Index"><i class="fa-solid fa-users p-2"></i> <span>Clients</span> </a>
-                        <a class="list-group-item border-end-0 d-flex flex-row align-items-center text-truncate p-2" data-bs-parent="#sidebar" asp-page="/MembershipTypes/Index"><i class="fa-solid fa-home p-2"></i> <span>Types</span> </a>
-                        <a class="list-group-item border-end-0 d-flex flex-row align-items-center text-truncate p-2" data-bs-parent="#sidebar" asp-page="/Memberships/Index"><i class="fa-solid fa-dumbbell p-2"></i> <span>Memberships</span> </a>
+                        <div class="sidebar-logo mb-2">Ground Up</div>
+                        <a class="sidebar-item d-flex flex-row align-items-center text-truncate p-2 mx-2" data-bs-parent="#sidebar" asp-page="/Index"><i class="fa-solid fa-home p-2"></i> <span>Home</span> </a>
+                        <a class="sidebar-item d-flex flex-row align-items-center text-truncate p-2 mx-2" data-bs-parent="#sidebar" asp-page="/Calendars/Index"><i class="fa-solid fa-calendar p-2"></i> <span>Calendar</span> </a>
+                        <a class="sidebar-item d-flex flex-row align-items-center text-truncate p-2 mx-2" data-bs-parent="#sidebar" asp-page="/Clients/Index"><i class="fa-solid fa-users p-2"></i> <span>Clients</span> </a>
+                        <a class="sidebar-item d-flex flex-row align-items-center text-truncate p-2 mx-2" data-bs-parent="#sidebar" asp-page="/MembershipTypes/Index"><i class="fa-solid fa-home p-2"></i> <span>Types</span> </a>
+                        <a class="sidebar-item d-flex flex-row align-items-center text-truncate p-2 mx-2" data-bs-parent="#sidebar" asp-page="/Memberships/Index"><i class="fa-solid fa-dumbbell p-2"></i> <span>Memberships</span> </a>
                     </div>
                 </div>
             </div>
             <main class="col ps-md-2 pt-2">
+                <div class="d-flex flex-row justify-content-between align-items-center flex-grow-1 p-2 border-bottom-1">
+                    <button data-bs-target="#sidebar" data-bs-toggle="collapse" class="btn btn-default"><i class="fa-solid fa-bars"></i> </button>
+                </div>
                 @RenderBody()
             </main>
         </div>
